--- a/app/styles/components/domain/domain-view.css
+++ b/app/styles/components/domain/domain-view.css
@@ -6,7 +6,9 @@
 @value color-interaction-font: white;
 
 :global(#domain) {
-  overflow-x: hidden;
+  position: relative;
+  overflow: hidden;
+  height: 100%;
 }
 
 :global(#domain h1) {
@@ -21,15 +23,18 @@
 
 :global(#domain-view) {
   width: 100%;
-  margin: 0 50%;
   padding-top: 35px;
-  padding-bottom: 35px;
+  padding-bottom: 30px;
+  position: absolute;
+  overflow: auto;
+  height: 100%;
 }
 
 :global(#domain-view-wrapper) {
   width: 80%;
-  margin-left: -40%;
-  padding: 20px 50px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 30px;
   box-shadow: 0px 5px 10px #d1d1e0;
 }
 
