--- a/app/styles/components/ui/menu.css
+++ b/app/styles/components/ui/menu.css
@@ -16,7 +16,7 @@
   background: inherit;
   color: inherit;
   /* color: inherit; */
-  width: 100pt;
+  width: 7em;
   height: 100%;
   font-size: 16px;
   border: none;
